# rocket-mattiarubinicom

./: .gitignore  Cargo.toml  DockerFile  Dockerfile  Dockerfile1  Jenkinsfile  README.md  Rocket.toml  compose.sh  docker-compose.yaml  mattiarubinicom-kube-kompose.yaml  mattiarubinicom-kube.yaml  mattiarubinicom.Dockerfile  rproxy.Dockerfile  rproxy.conf
container/: docker-compose.yaml  mattiarubinicom-kube-podman.yaml  mattiarubinicom.Dockerfile  rproxy.Dockerfile
container/kompose/: homepage-deployment.yaml  homepage-service.yaml  mattiarubinicom-deployment.yaml  mattiarubinicom-service.yaml
container/podman-k8s/: kube-mattiarubinicom.yaml  namespace.yaml
homepage/: Cargo.toml  Rocket.toml
homepage/src/: context_old.rs  routes_old.rs
homepage/static/css/common/: header.css  main.css
homepage/static/css/pages/: landing_page.css
homepage/static/js/: layout.js
homepage/templates/common/: layout.hbs
homepage/templates/pages/: landing_page.html.hbs
mattiarubinicom/src/: main.rs
mattiarubinicom/static/css/common/: layout.css  (+1 more)
mattiarubinicom/templates/common/: footer.hbs  header.hbs
mattiarubinicom/templates/pages/: about_me.html.hbs  landing_page.html.hbs
rproxy/: homepage.conf
src/: catchers.rs  catchers_old.rs  context.rs  main.rs  main_old.rs  routes.rs
static/css/common/: footer.css  header.css  layout.css  main.css
static/css/pages/: index.css
static/js/: layout.js
templates/: header.hbs  index.hbs  layout.hbs
templates/common/: footer.hbs  header.hbs  layout.hbs
templates/pages/: index.hbs
templates/pages/errors/: 404.hbs
(+2 files in other folders)
