[package]
name = "mattiarubinicom"
version = "0.1.0"
authors = ["Rubini Mattia <mattia.rubini@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
rocket = "0.5.0-rc.1"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["handlebars"]